<resources>
    <string name="app_name">IntelliExpense</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="txtTotalExpenses">Total Expenses</string>
    <string name="txtRemainingBalance">Remaining Balance</string>
    <string name="txtSavingsAmount">SavingsAmount</string>
    <string name="txtTotalAvailBalance">Total Avail Balance</string>
    <string name="txtExpenseCategories">Expense Categories</string>
    <string name="txtOverview">Overview</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="years">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string name="login">Login</string>
    <string name="loginID">Enter login ID</string>
    <string name="password">Enter password</string>
    <string name="signUp">Sign Up!</string>
    <string name="wrongCredentials">Either login id or password is wrong. Please try again!</string>

    <string name="loginIDScreenUserProfile">LoginID:</string>
    <string name="existingLoginId">This LoginID already exists. Please enter a new LoginID.</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="email">Email:</string>
    <string name="invalidEmail">Please enter a valid email address.</string>
    <string name="phone">Phone:</string>
    <string name="passwordScreenUserProfile">Password:</string>
    <string name="invalidPassword">Password must have minimum 8 characters.</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="invalidconfirmPassword">Both the passwords dont match.</string>
    <string name="monthlyIncome">Monthly Income:</string>
    <string name="monthlyIncomeNote">Note: Updated monthly income will be considered from the next month.</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtChooseCategory">Choose Category</string>
    <string name="txtEnterExpense">Enter an Expense</string>
    <string name="txtHintExpDesc">Enter Item Description</string>
    <string name="txtAmt">Enter Expense Amount</string>
    <string-array name="expCategoriesArray">
        <item>Food</item>
        <item>Transportation</item>
        <item>Utilities</item>
        <item>Grocery</item>
        <item>Insurance</item>
        <item>Gas</item>
        <item>Clothing</item>
        <item>Entertainment</item>
    </string-array>
    <string name="txtClear">Clear</string>
    <string name="txtSave">Save</string>
    <string name="txtRecentTxns">Recent Transactions</string>
    <string name="txtCategory">Category</string>
    <string name="txtCurrentMonthSummary">CURRENT MONTH\'S SUMMARY</string>
    <string name="txtClothing">Clothing</string>
    <string name="txtEntertainment">Entertainment</string>
    <string name="txtFood">Food</string>
    <string name="txtGas">Gas</string>
    <string name="txtGrocery">Grocery</string>
    <string name="txtInsurance">Insurance</string>
    <string name="txtTransportation">Transportation</string>
    <string name="txtUtilities">Utilities</string>
    <string name="txtAmount">Amount</string>
    <string name="txtGoalsOverview">SAVINGS AND GOALS OVERVIEW</string>
    <string name="txtRemSavingsAmt">Remaining Savings Amount:</string>
    <string name="txtGoalName">Enter Goal Name</string>
    <string name="txtGoalAmt">Enter Goal Amount</string>
    <string name="txtTargetDate">Target Date:</string>
    <string name="txtDate">Date</string>
</resources>