<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">


    <EditText
        android:id="@+id/txtGoalDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/txtGoalName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtGoalAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtGoalDesc"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:hint="@string/txtGoalAmt"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtTargetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtGoalAmt"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="154dp"
        android:text="@string/txtTargetDate"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtGoalDesc"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="1dp"
        android:text="@string/txtDate" />

</RelativeLayout>