<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <Spinner
        android:id="@+id/expCategoriesSpinner"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="133dp"
        android:layout_marginRight="127dp"
        android:prompt="@string/txtChooseCategory" />

    <EditText
        android:id="@+id/txtExpDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/expCategoriesSpinner"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/txtHintExpDesc"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtExpAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/expCategoriesSpinner"
        android:layout_marginStart="0dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txtAmt"
        android:inputType="numberDecimal"
        android:text="0" />

</RelativeLayout>